<resources>
    <string name="app_name">Kit del programador</string>

    <string name="text_numero1">Número</string>
    <string name="text_base">En base</string>
    <string name="text_operacion">Operacíon a realizar</string>
    <string name="text_resultado_base">Resultado en base</string>
    <string name="text_boton_calcular">Calcular</string>
    <string name="text_boton_convertir">Convertir</string>
    <string name="text_resultado">Resultado</string>
    <string name="text_boton_borrar">Borrar</string>
    <string-array name="bases">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>

    <string-array name="operadores">
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>/</item>
    </string-array>

</resources>
