<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ezh.kitdelprogramador.fragmentos.FragmentConvertidor">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp">
        <EditText
            android:id="@+id/text_convert_num1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/text_numero1"
            android:textColor="@color/texto"
            android:textSize="20dp"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/texto"
                android:textSize="20dp"
                android:text="@string/text_base"/>
            <Spinner
                android:id="@+id/spinner_convert_base_num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/bases"></Spinner>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/texto"
            android:textSize="20dp"
            android:text="@string/text_resultado_base"/>
        <Spinner
            android:id="@+id/spinner_convert_base_resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/bases">

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.37">
        <Button
            android:id="@+id/btnConvertir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_boton_convertir"
            android:background="@color/colorAccent"
            android:textSize="15dp"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_resultado"
            android:textColor="@color/texto"
            android:layout_marginTop="30dp"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:id="@+id/text_resultado2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/texto"
            android:textSize="30dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>



</LinearLayout>
    </ScrollView>

