<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ezh.kitdelprogramador.fragmentos.FragmentCalculadora">

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp">
            <EditText
                android:id="@+id/textNumero1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_numero1"
                android:textColor="@color/texto"
                android:textSize="20dp"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/texto"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_base"/>
                <Spinner
                    android:id="@+id/spinner_base_num1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/bases"></Spinner>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/texto"
                android:textSize="20dp"
                android:text="@string/text_operacion"/>
            <Spinner
                android:id="@+id/spinner_operacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/operadores"></Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_numero2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp">
            <EditText
                android:id="@+id/textNumero2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_numero1"
                android:textColor="@color/texto"
                android:textSize="20dp"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/texto"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_base"/>
                <Spinner
                    android:id="@+id/spinner_base_num2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/bases"></Spinner>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/texto"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_resultado_base"/>
            <Spinner
                android:id="@+id/spinner_base_resultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/bases">

            </Spinner>
        </LinearLayout>



        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_boton_calcular"
            android:background="@color/colorAccent"
            android:textSize="15dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/texto"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_resultado"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/text_resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/texto"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal" />
</LinearLayout>
</ScrollView>
